--- a/BTScoreboard/Base.lproj/Main_iPhone.storyboard
+++ b/BTScoreboard/Base.lproj/Main_iPhone.storyboard
@@ -1,18 +1,119 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4451" systemVersion="13A461" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3676"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="BTSBViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Bd5-At-E0u"/>
+                        <viewControllerLayoutGuide type="bottom" id="85f-rh-76x"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jsf-Ke-BnS">
+                                <rect key="frame" x="20" y="206" width="88" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <state key="normal" title="00">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="homeScoreChange:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="zeL-ek-NnT"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Rk-FJ-Tyl">
+                                <rect key="frame" x="182" y="20" width="205" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="aOF-k4-jOZ"/>
+                                    <constraint firstAttribute="width" constant="205" id="lXp-zI-Do2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <state key="normal" title="00:00">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="timeStartStop:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="MQy-wh-qax"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kq8-he-ann">
+                                <rect key="frame" x="458" y="206" width="90" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="6Ng-OR-2Fz"/>
+                                    <constraint firstAttribute="width" constant="90" id="m5V-O0-oYv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <state key="normal" title="00">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="visitorSccoreChange:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="yUt-6j-RQw"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3A-G7-CQh">
+                                <rect key="frame" x="20" y="283" width="46" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visitor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LYU-aa-Lk2">
+                                <rect key="frame" x="500" y="283" width="48" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cD3-v9-2Yh">
+                                <rect key="frame" x="265" y="93" width="38" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ffg-FC-YYA">
+                                <rect key="frame" x="264" y="279" width="40" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="resetClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="yXh-7M-Rch"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ffg-FC-YYA" secondAttribute="bottom" constant="11" id="B7T-gp-1rU"/>
+                            <constraint firstItem="jsf-Ke-BnS" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="Jo3-BZ-JCj"/>
+                            <constraint firstItem="cD3-v9-2Yh" firstAttribute="top" secondItem="8Rk-FJ-Tyl" secondAttribute="bottom" constant="8" symbolic="YES" id="L5R-Mw-Z8b"/>
+                            <constraint firstItem="v3A-G7-CQh" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="RBa-oT-g9b"/>
+                            <constraint firstItem="ffg-FC-YYA" firstAttribute="centerX" secondItem="8Rk-FJ-Tyl" secondAttribute="centerX" id="Sop-GJ-I9z"/>
+                            <constraint firstItem="ffg-FC-YYA" firstAttribute="centerX" secondItem="cD3-v9-2Yh" secondAttribute="centerX" id="WxH-fr-pfn"/>
+                            <constraint firstItem="LYU-aa-Lk2" firstAttribute="top" secondItem="kq8-he-ann" secondAttribute="bottom" constant="12" id="YoV-yL-vnc"/>
+                            <constraint firstItem="kq8-he-ann" firstAttribute="bottom" secondItem="jsf-Ke-BnS" secondAttribute="bottom" id="aCt-pW-PSf"/>
+                            <constraint firstAttribute="trailing" secondItem="LYU-aa-Lk2" secondAttribute="trailing" constant="20" id="cTu-d6-CFG"/>
+                            <constraint firstAttribute="bottom" secondItem="LYU-aa-Lk2" secondAttribute="bottom" constant="16" id="dX3-kv-YLR"/>
+                            <constraint firstAttribute="trailing" secondItem="kq8-he-ann" secondAttribute="trailing" constant="20" id="dfI-CY-E4Q"/>
+                            <constraint firstItem="kq8-he-ann" firstAttribute="top" secondItem="jsf-Ke-BnS" secondAttribute="top" id="ft7-0k-VuC"/>
+                            <constraint firstItem="ffg-FC-YYA" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="gud-Vu-i61"/>
+                            <constraint firstItem="8Rk-FJ-Tyl" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" symbolic="YES" id="ofe-lK-MZj"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kq8-he-ann" secondAttribute="trailing" constant="20" id="pZ3-RO-HyH"/>
+                            <constraint firstAttribute="bottom" secondItem="v3A-G7-CQh" secondAttribute="bottom" constant="16" id="qvS-lQ-qTM"/>
+                        </constraints>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="homeScore" destination="jsf-Ke-BnS" id="yCF-4g-es1"/>
+                        <outlet property="time" destination="8Rk-FJ-Tyl" id="RxV-Ix-mOw"/>
+                        <outlet property="visitorScore" destination="kq8-he-ann" id="oTl-gj-57w"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
